@@ -163,7 +163,7 @@ public class ManagerTestTool
         person.setFirstName("John");
         person.setLastName("Doe");
         person.setEmail("John.Doe@group.org");
-        person.setId(new Long(42));
+        person.setId(Long.valueOf(42));
         return person;
     }
 
